# tsurugroups-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: serializers.py  urls.py  views.py
apps/core/: admin.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/scheduling/: models.py  urls.py
apps/scheduling/migrations/: 0001_initial.py
apps/subscriptions/: models.py  urls.py  views.py
apps/subscriptions/migrations/: 0001_initial.py  0002_alter_historicalplan_stripe_price_id_and_more.py  0003_alter_historicalsubscription_stripe_customer_id_and_more.py
apps/whatsapp/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/whatsapp/migrations/: 0001_initial.py  0002_whatsappcampaign.py  0003_remove_whatsappcampaign_campaign_and_more.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  home.html  home_simple.html  profile.html  subscription.html  test.html
templates/auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  register.html
templates/subscriptions/: plans.html
templates/whatsapp/: connect.html  groups_list.html  instances_list.html  schedule_message.html  scheduled_messages_list.html  send_message.html
tsuru_groups/: asgi.py  settings.py  urls.py  wsgi.py
